--- a/_config.yml
+++ b/_config.yml
@@ -117,11 +117,11 @@ widgets:
         # Where should the widget be placed, left or right
         position: left
         # Author name to be shown in the profile widget
-        author: Your name
+        author: Kubing Lin
         # Title of the author to be shown in the profile widget
-        author_title: Your title
+        author_title: Web Developer
         # Author's current location to be shown in the profile widget
-        location: Your location
+        location: Taiwan
         # Path or URL to the avatar to be shown in the profile widget
         avatar: 
         # Email address for the Gravatar to be shown in the profile widget
