--- a/_config.yml
+++ b/_config.yml
@@ -67,29 +67,29 @@ comment:
     type: 
 # Donation entries
 # https://ppoffice.github.io/hexo-theme-icarus/categories/Donation/
-donate:
-    -
+# donate:
+    # -
         # Donation entry name
-        type: alipay
+        # type: alipay
         # Qrcode image URL
-        qrcode: ''
-    -
+        # qrcode: ''
+    # -
         # Donation entry name
-        type: wechat
+        # type: wechat
         # Qrcode image URL
-        qrcode: ''
-    -
+        # qrcode: ''
+    # -
         # Donation entry name
-        type: paypal
+        # type: paypal
         # Paypal business ID or email address
-        business: ''
+        # business: ''
         # Currency code
-        currency_code: USD
-    -
+        # currency_code: USD
+    # -
         # Donation entry name
-        type: patreon
+        # type: patreon
         # URL to the Patreon page
-        url: ''
+        # url: ''
 # Share plugin settings
 # https://ppoffice.github.io/hexo-theme-icarus/categories/Plugins/Share
 share:
@@ -125,7 +125,7 @@ widgets:
         # Path or URL to the avatar to be shown in the profile widget
         avatar: 
         # Email address for the Gravatar to be shown in the profile widget
-        gravatar: 
+        gravatar: edkt973@gmail.com
         # Whether to show avatar image rounded or square
         avatar_rounded: false
         # Path or URL for the follow button
