--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ favicon: /images/sonic.svg
 # Path or URL to RSS atom.xml
 rss: 
 # Path or URL to the website's logo to be shown on the left of the navigation bar or footer
-logo: /images/logo.svg
+logo: /images/sonic.svg
 # Open Graph metadata
 # https://hexo.io/docs/helpers.html#open-graph
 open_graph:
@@ -152,30 +152,30 @@ widgets:
         type: toc
         # Where should the widget be placed, left or right
         position: left
-    -
+    # -
         # Widget name
-        type: links
+        # type: links
         # Where should the widget be placed, left or right
-        position: left
+        # position: left
         # Links to be shown in the links widget
         # links:
             # Hexo: 'https://hexo.io'
             # PPOffice: 'https://github.com/ppoffice'
     -
         # Widget name
-        type: category
-        # Where should the widget be placed, left or right
-        position: left
-    -
-        # Widget name
-        type: tagcloud
-        # Where should the widget be placed, left or right
-        position: left
-    -
-        # Widget name
         type: recent_posts
         # Where should the widget be placed, left or right
         position: right
+    -
+        # Widget name
+        type: category
+        # Where should the widget be placed, left or right
+        position: left
+    # -
+        # Widget name
+        # type: tagcloud
+        # Where should the widget be placed, left or right
+        # position: left
     -
         # Widget name
         type: archive
